--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -3,6 +3,13 @@
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII"/>
+<style>
+.password-verdict{
+color:#000;
+}
+</style>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script th:src="@{/resources/pwstrength.js}"></script>
 <title th:text="#{message.changePassword}">change password</title>
 </head>
 <body>
@@ -20,50 +27,104 @@
         <div class="row">
         <div id="errormsg" class="alert alert-danger" style="display:none"></div>
             <h1 th:text="#{message.changePassword}">change password </h1>
-            <div >
+            <form >
                 <br/>
                 
                     <label class="col-sm-2" th:text="#{label.user.oldPassword}">old</label>
-                    <span class="col-sm-5"><input class="form-control" id="oldpass" name="oldpassword" type="password" value="" /></span>
+                    <span class="col-sm-5"><input class="form-control" id="oldpass" name="oldPassword" type="password" value="" /></span>
                     <span class="col-sm-5"></span>
 <br/><br/>         
                     <label class="col-sm-2" th:text="#{label.user.newPassword}">new</label>
-                    <span class="col-sm-5"><input class="form-control" id="pass" name="password" type="password" value="" /></span>
-                    <span class="col-sm-5"></span>
+                    <span class="col-sm-5"><input class="form-control" id="password" name="newPassword" type="password" value="" /></span>
+                    <div class="col-sm-12"></div>
+                    
 <br/><br/>
                     <label class="col-sm-2" th:text="#{label.user.confirmPass}">confirm</label>
-                    <span class="col-sm-5"><input class="form-control" id="passConfirm" type="password" value="" /></span>
-                    <span id="error" class="alert alert-danger" style="display:none" th:text="#{PasswordMatches.user}">error</span>
+                    <div class="col-sm-5"><input class="form-control" id="matchPassword" name="matchingPassword" type="password" value="" /></div>
+                    <div id="globalError" class="alert alert-danger col-sm-12" style="display:none">error</div>
                    
+                
+                <div class="col-sm-12">
                 <br/><br/>
                 <button class="btn btn-primary" type="submit" onclick="savePass()" th:text="#{message.changePassword}">change
                 </button>
-            </div>
+                </div>
+            </form>
             
         </div>
     </div>
     
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
 <script th:inline="javascript">
 /*<![CDATA[*/
 var serverContext = [[@{/}]];
 
-function savePass(){
-    var pass = $("#pass").val();
-    var valid = pass == $("#passConfirm").val();
-    if(!valid) {
-      $("#error").show();
-      return;
+$(document).ready(function () {
+    $('form').submit(function(event) {
+    	savePass(event);
+    });
+    
+    $(":password").keyup(function(){
+        if($("#password").val() != $("#matchPassword").val()){
+            $("#globalError").show().html(/*[[#{PasswordMatches.user}]]*/);
+        }else{
+            $("#globalError").html("").hide();
+        }
+    });
+    
+    options = {
+            common: {minChar:8},
+            ui: {
+                showVerdictsInsideProgressBar:true,
+                showErrors:true,
+                errorMessages:{
+                      wordLength: /*[[#{error.wordLength}]]*/,
+                      wordNotEmail: /*[[#{error.wordNotEmail}]]*/,
+                      wordSequences: /*[[#{error.wordSequences}]]*/,
+                      wordLowercase: /*[[#{error.wordLowercase}]]*/,
+                      wordUppercase: /*[[#{error.wordUppercase}]]*/,
+                      wordOneNumber: /*[[#{error.wordOneNumber}]]*/,
+                      wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/'
+                    }
+                }
+        };
+     $('#password').pwstrength(options);
+});
+
+function savePass(event){
+    event.preventDefault();
+    $(".alert").html("").hide();
+    $(".error-list").html("");
+    if($("#password").val() != $("#matchPassword").val()){
+        $("#globalError").show().html(/*[[#{PasswordMatches.user}]]*/);
+        return;
     }
-    $.post(serverContext + "user/updatePassword",{password: pass, oldpassword: $("#oldpass").val()} ,function(data){
-            window.location.href = serverContext + "console.html" + "?message="+data.message;
+    var formData= $('form').serialize();
+    $.post(serverContext + "user/updatePassword",formData ,function(data){
+    	window.location.href = serverContext + "console.html" + "?message="+data.message;
     })
     .fail(function(data) {
-    	$("#errormsg").show().html(data.responseJSON.message);
+        if(data.responseJSON.error.indexOf("InvalidOldPassword") > -1) {
+            $("#errormsg").show().append(data.responseJSON.message);
+        }
+        else if(data.responseJSON.error.indexOf("InternalError") > -1){
+            $("#errormsg").show().append(data.responseJSON.message);
+        }
+        else{
+        	var errors = $.parseJSON(data.responseJSON.message);
+            $.each( errors, function( index,item ){
+                $("#globalError").show().html(item.defaultMessage);
+            });
+            errors = $.parseJSON(data.responseJSON.error);
+            $.each( errors, function( index,item ){
+                $("#globalError").show().append(item.defaultMessage+"<br/>");
+            });
+        }
     });
 }
-/*]]>*/
-</script>  
+/*]]>*/ 
+
+</script>
 </body>
 
 </html>
