--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,6 +57,8 @@ label{padding-left:0 !important}
             </form>
             <br/> Current Locale :  <span th:text="${#locale}"></span><br/><br/> 
              <a class="btn btn-default" th:href="@{/registration.html}" th:text="#{label.form.loginSignUp}">signup</a>
+             <br/>
+             <a class="btn btn-default" th:href="@{/registrationCaptcha.html}" th:text="#{label.form.loginSignUpCaptcha}">captcha signup</a>
              <br/><br/>
             <a class="btn btn-default" th:href="@{/forgetPassword.html}" th:text="#{message.resetPassword}">reset</a>
         </div>
