--- a/src/main/resources/templates/badUser.html
+++ b/src/main/resources/templates/badUser.html
@@ -9,10 +9,10 @@
 <br/>
 <a class="btn btn-default" th:href="@{/registration.html}" th:text="#{label.form.loginSignUp}">signup</a>
 
-<div th:if="${param.expired}">
+<div th:if="${param.expired[0]}">
 <br/>
-<h1>${label.form.resendRegistrationToken}</h1>
-<button onclick="resendToken()" th:text="#{label.form.resendRegistrationToken}">resend</button>
+<h1 th:text="#{label.form.resendRegistrationToken}">resend</h1>
+<button onclick="resendToken()">resend</button>
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
