--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,6 +51,10 @@ label{padding-left:0 !important}
                  <label class="col-sm-4" th:text="#{label.form.loginPass}">password</label>
                  <span class="col-sm-8"><input class="form-control" type='password' name='password' /></span>
                 
+                <br/><br/>        
+                 <label class="col-sm-4" th:text="#{label.form.login2fa}">Google Authenticator Verification Code</label>
+                 <span class="col-sm-8"><input class="form-control" type='text' name='code' /></span>
+                
                 <br/><br/>
                  <input class="btn btn-primary" name="submit" type="submit" th:value="#{label.form.submit}" />
  
