session registry improvement

--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -25,6 +25,9 @@
 	    <a class="btn btn-default" th:href="@{/admin.html}" th:text="#{label.pages.admin}">admin</a>
 	   
 	    <a th:href="@{/loggedUsers}" th:text="#{label.pages.users.message}">View logged in users</a>
+	    
+	    <a th:href="@{/loggedUsersFromSessionRegistry}" th:text="#{label.pages.users.message}">View logged in users</a>
+	    
     </div>
 </body>
 </html>
