--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -23,10 +23,10 @@
 	    <p th:text="${param.user[0]}">user</p>
 	     
 	    <a class="btn btn-default" th:href="@{/admin.html}" th:text="#{label.pages.admin}">admin</a>
-	   
+		<br /> <br />
 	    <a th:href="@{/loggedUsers}" th:text="#{label.pages.users.message}">View logged in users</a>
-	    
-	    <a th:href="@{/loggedUsersFromSessionRegistry}" th:text="#{label.pages.users.message}">View logged in users</a>
+		<br />	    
+	    <a th:href="@{/loggedUsersFromSessionRegistry}" th:text="#{label.pages.users.sessionregistry.message}">View logged in users</a>
 	    
     </div>
 </body>
