fix reset password authentication issue

--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -13,7 +13,7 @@ color:#000;
 <title th:text="#{message.updatePassword}">update password</title>
 </head>
 <body>
-<div sec:authorize="hasAuthority('READ_PRIVILEGE')">
+<div sec:authorize="hasAuthority('CHANGE_PASSWORD_PRIVILEGE')">
     <div class="container">
         <div class="row">
             <h1 th:text="#{message.resetYourPassword}">reset</h1>
