Fix brokenlink when user clicking on back (#27)
fixes brokenlink when user clicks on back button from captcha registration page

--- a/src/main/resources/templates/registrationCaptcha.html
+++ b/src/main/resources/templates/registrationCaptcha.html
@@ -57,7 +57,7 @@ color:#000;
                 <button type="submit" class="btn btn-primary" th:text="#{label.form.submit}">submit</button>
             </form>
             <br/> 
-            <a th:href="@{/login.html}" th:text="#{label.form.loginLink}">login</a>
+            <a th:href="@{/login}" th:text="#{label.form.loginLink}">login</a>
         </div>
     </div>
 
