Fix JavaScript issue (#32)
This fix will enable running javascript correctly

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -86,8 +86,8 @@ $(document).ready(function () {
 		    		  wordSequences: /*[[#{error.wordSequences}]]*/,
 		    		  wordLowercase: /*[[#{error.wordLowercase}]]*/,
 		    		  wordUppercase: /*[[#{error.wordUppercase}]]*/,
-		    	      wordOneNumber: /*[[#{error.wordOneNumber}]]*/,
-		    		  wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/'
+		    	          wordOneNumber: /*[[#{error.wordOneNumber}]]*/,
+		    		  wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/
 		    		}
 		    	}
 		};
