--- a/src/main/resources/templates/forgetPassword.html
+++ b/src/main/resources/templates/forgetPassword.html
@@ -10,9 +10,11 @@
     <h1 th:text="#{message.resetPassword}">reset</h1>
     <br/>
     <div class="row">
+      <form action="#">
         <label class="col-sm-1" th:text="#{label.user.email}">email</label>
-        <span class="col-sm-5"><input class="form-control" id="email" name="email" type="email" value="" /></span>
-        <button class="btn btn-primary" type="submit" onclick="resetPass()" th:text="#{message.resetPassword}">reset</button>
+        <span class="col-sm-5"><input class="form-control" id="email" name="email" type="email" value="" required="required" /></span>
+        <button class="btn btn-primary" type="submit" th:text="#{message.resetPassword}">reset</button>
+      </form>
     </div>
 
 <br/> 
@@ -23,10 +25,17 @@
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script th:inline="javascript">
-/*<![CDATA[*/
+/*<![CDATA[*/           
 var serverContext = [[@{/}]];
 
-function resetPass(){
+$(document).ready(function () {
+	$('form').submit(function(event) {
+		resetPass(event);
+    });
+});
+
+function resetPass(event){
+    event.preventDefault();	
     var email = $("#email").val();
     $.post(serverContext + "user/resetPassword",{email: email} ,function(data){
             window.location.href = serverContext + "login?message=" + data.message;
