--- a/src/main/resources/templates/console.html
+++ b/src/main/resources/templates/console.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" th:href="@{/home.html}" th:text="#{label.pages.home.title}">home</a>
+      <a class="navbar-brand" th:href="@{/homepage.html}" th:text="#{label.pages.home.title}">home</a>
     </div> 
       <ul class="nav navbar-nav navbar-right">
         <li><a th:href="@{/logout}" th:text="#{label.pages.logout}">logout</a> </li>
