--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -38,7 +38,6 @@ color:#000;
     </div>
    
 <script th:inline="javascript">
-/*<![CDATA[*/
 var serverContext = [[@{/}]];
 
 $(document).ready(function () {
@@ -66,7 +65,7 @@ $(document).ready(function () {
                       wordLowercase: /*[[#{error.wordLowercase}]]*/,
                       wordUppercase: /*[[#{error.wordUppercase}]]*/,
                       wordOneNumber: /*[[#{error.wordOneNumber}]]*/,
-                      wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/'
+                      wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/
                     }
                 }
         };
@@ -101,7 +100,6 @@ function savePass(event){
         }
     });
 }
-/*]]>*/ 
 
 </script>    
 </div>
