fix change pass page load

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -83,7 +83,7 @@ $(document).ready(function () {
                       wordLowercase: /*[[#{error.wordLowercase}]]*/,
                       wordUppercase: /*[[#{error.wordUppercase}]]*/,
                       wordOneNumber: /*[[#{error.wordOneNumber}]]*/,
-                      wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/'
+                      wordOneSpecialChar: /*[[#{error.wordOneSpecialChar}]]*/
                     }
                 }
         };
